[package]
name = "agent-common"
version = "0.1.0"
edition = "2021"

license.workspace = true

[features]
default = []
user = ["aya","serde"]


[dependencies]
aya = { workspace = true, optional = true }
bitflags = "2.9.1"
serde = { version = "1.0.219", features = ["derive"], optional = true }

[lib]
path = "src/lib.rs"
